Update 'go-thpbrpdd' component image to: quay.io/rhtap_qe/go-thpbrpdd:0809eff51b44f8afb99d22d76d9fc52aa3e8c9b7@sha256:aaac0d5453cd77875b9c47ca0633a56c81e3997d26fc4ea17e6797de1d1d8d74

--- a/components/go-thpbrpdd/overlays/development/deployment-patch.yaml
+++ b/components/go-thpbrpdd/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-thpbrpdd
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-thpbrpdd:0809eff51b44f8afb99d22d76d9fc52aa3e8c9b7@sha256:aaac0d5453cd77875b9c47ca0633a56c81e3997d26fc4ea17e6797de1d1d8d74
+          name: container-image
